--- a/Forecasting.ipynb
+++ b/Forecasting.ipynb
@@ -5,7 +5,7 @@
    "id": "11370dba",
    "metadata": {},
    "source": [
-    "# install library"
+    "# install librarys"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6cf9951c",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "813b6690",
    "metadata": {},
    "outputs": [],
