--- a/time.ipynb
+++ b/time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3c90058f",
    "metadata": {},
    "outputs": [],
@@ -17,9 +17,16 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import TimeSeriesSplit\n",
-    "\n",
-    "\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ad6c86b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class DriftPointDetector:\n",
     "    \"\"\"\n",
     "    Detect drift points using sliding window KS test\n",
@@ -88,7 +95,7 @@
     "            model.fit(X_train, y_train)\n",
     "            y_pred = model.predict(X_test)\n",
     "\n",
-    "            rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "            rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "            mae = mean_absolute_error(y_test, y_pred)\n",
     "            print(f\"[Adaptive Fold {i+1}] RMSE={rmse:.4f}, MAE={mae:.4f}\")\n",
     "\n",
@@ -117,25 +124,54 @@
     "            model.fit(X_train, y_train)\n",
     "            y_pred = model.predict(X_test)\n",
     "\n",
-    "            rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "            rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "            mae = mean_absolute_error(y_test, y_pred)\n",
     "            print(f\"[Baseline Fold {i+1}] RMSE={rmse:.4f}, MAE={mae:.4f}\")\n",
     "\n",
     "            metrics_rmse.append(rmse)\n",
     "            metrics_mae.append(mae)\n",
     "\n",
-    "        return metrics_rmse, metrics_mae\n",
-    "\n",
-    "\n",
+    "        return metrics_rmse, metrics_mae\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dec8e820",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Drift-Aware Adaptive CV ---\n",
+      "[Adaptive Fold 1] RMSE=0.7568, MAE=0.3168\n",
+      "[Adaptive Fold 2] RMSE=0.9170, MAE=0.3527\n",
+      "[Adaptive Fold 3] RMSE=0.7294, MAE=0.3595\n",
+      "\n",
+      "--- Baseline TimeSeriesSplit CV ---\n",
+      "[Baseline Fold 1] RMSE=0.3959, MAE=0.1677\n",
+      "[Baseline Fold 2] RMSE=0.3501, MAE=0.1651\n",
+      "[Baseline Fold 3] RMSE=0.3589, MAE=0.1674\n",
+      "[Baseline Fold 4] RMSE=0.5006, MAE=0.1909\n",
+      "[Baseline Fold 5] RMSE=0.3837, MAE=0.1581\n"
+     ]
+    }
+   ],
+   "source": [
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
     "    np.random.seed(42)\n",
-    "    X = pd.DataFrame({\n",
-    "        'feature1': np.random.randn(200),\n",
-    "        'feature2': np.random.randn(200) + np.linspace(0, 5, 200)\n",
-    "    })\n",
-    "    y = X['feature1'] * 1.5 + X['feature2'] * 0.5 + np.random.randn(200) * 0.2\n",
+    "    # โหลดไฟล์ข้อมูลหุ้น\n",
+    "    df = pd.read_csv(\"nvidia_10yr_data.csv\", parse_dates=[\"Date\"])\n",
+    "    df = df.sort_values(\"Date\")  # จัดเรียงตามเวลา\n",
     "\n",
+    "    # Feature selection (เลือก column ที่จะใช้เป็น X)\n",
+    "    X = df[['Open', 'High', 'Low', 'Volume']]\n",
+    "\n",
+    "    # Target (สิ่งที่เราจะพยากรณ์ เช่นราคาปิด)\n",
+    "    y = df['Close']\n",
     "    # Drift-aware adaptive CV\n",
     "    detector = DriftPointDetector(window_size=20, threshold=0.01)\n",
     "    drift_points = detector.detect(X)\n",
@@ -151,8 +187,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
