--- a/time.ipynb
+++ b/time.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3c90058f",
+   "id": "264a7467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,8 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import TimeSeriesSplit\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ad6c86b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "\n",
     "class DriftPointDetector:\n",
     "    \"\"\"\n",
     "    Detect drift points using sliding window KS test\n",
@@ -58,7 +50,7 @@
     "    \"\"\"\n",
     "    Generate train/test folds based on drift points\n",
     "    \"\"\"\n",
-    "    def __init__(self, min_fold_size: int = 30, test_ratio: float = 0.2):\n",
+    "    def __init__(self, min_fold_size: int = 50, test_ratio: float = 0.2):\n",
     "        self.min_fold_size = min_fold_size\n",
     "        self.test_ratio = test_ratio\n",
     "\n",
@@ -90,7 +82,7 @@
     "\n",
     "            model = Pipeline([\n",
     "                ('scale', StandardScaler()),\n",
-    "                ('regressor', RandomForestRegressor(n_estimators=50, random_state=42))\n",
+    "                ('regressor', RandomForestRegressor(n_estimators=100, random_state=42))\n",
     "            ])\n",
     "            model.fit(X_train, y_train)\n",
     "            y_pred = model.predict(X_test)\n",
@@ -131,12 +123,12 @@
     "            metrics_rmse.append(rmse)\n",
     "            metrics_mae.append(mae)\n",
     "\n",
-    "        return metrics_rmse, metrics_mae\n"
+    "        return metrics_rmse, metrics_mae"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "dec8e820",
    "metadata": {},
    "outputs": [
@@ -146,9 +138,9 @@
      "text": [
       "\n",
       "--- Drift-Aware Adaptive CV ---\n",
-      "[Adaptive Fold 1] RMSE=0.7568, MAE=0.3168\n",
-      "[Adaptive Fold 2] RMSE=0.9170, MAE=0.3527\n",
-      "[Adaptive Fold 3] RMSE=0.7294, MAE=0.3595\n",
+      "[Adaptive Fold 1] RMSE=0.7413, MAE=0.3111\n",
+      "[Adaptive Fold 2] RMSE=0.9760, MAE=0.3611\n",
+      "[Adaptive Fold 3] RMSE=0.6657, MAE=0.3338\n",
       "\n",
       "--- Baseline TimeSeriesSplit CV ---\n",
       "[Baseline Fold 1] RMSE=0.3959, MAE=0.1677\n",
