--- a/CV_Time.ipynb
+++ b/CV_Time.ipynb
@@ -2,27 +2,108 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "id": "067a876e",
+   "execution_count": 7,
+   "id": "b98d9810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\"nvidia_10yr_data.csv\", parse_dates=[\"Date\"])\n",
+    "df = df.sort_values(\"Date\").reset_index(drop=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5ac11798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Return'] = df['Close'].pct_change()\n",
+    "df['Volatility'] = df['Close'].rolling(10).std()\n",
+    "df['Price_Diff'] = df['High'] - df['Low']\n",
+    "df['Volume_Log'] = np.log1p(df['Volume'])\n",
+    "\n",
+    "# Drop NaN หลัง rolling\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "X = df[['Return', 'Volatility', 'Price_Diff', 'Volume_Log']]\n",
+    "y = df['Close']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "76697056",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detected drift points at indices: [871, 1544, 2053]\n",
+      "        Return  Volatility  Price_Diff  Volume_Log\n",
+      "18    1.350392   40.330823    1.905525   19.998356\n",
+      "19   -0.454397   39.761560    0.629440   19.970320\n",
+      "20    1.730180   40.143048    1.012461   19.727166\n",
+      "21   -0.984707   40.950648    0.010734   19.484991\n",
+      "22    2.926464   41.477991    0.104923   20.195640\n",
+      "...        ...         ...         ...         ...\n",
+      "2511  2.067152   32.229865    0.102976   19.849853\n",
+      "2512  1.823627   31.864406    0.575775   20.417012\n",
+      "2513  0.745986   31.424410    0.406209   19.097983\n",
+      "2514 -0.350745   30.883297    0.347602   20.002978\n",
+      "2515  6.406565   40.302903    2.859097   19.428317\n",
+      "\n",
+      "[2498 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f23b7dcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected drift points at indices: [200, 412, 612, 812, 1026, 1271, 1471, 1671, 1979, 2180]\n",
       "\n",
       "--- Drift-Aware Adaptive CV ---\n",
-      "[Adaptive Fold 1] RMSE=0.4364, MAE=0.1693\n",
-      "[Adaptive Fold 2] RMSE=0.3727, MAE=0.1609\n",
-      "[Adaptive Fold 3] RMSE=0.4395, MAE=0.1973\n",
-      "[Adaptive Fold 4] RMSE=0.2643, MAE=0.1447\n",
+      "[Adaptive Fold 1] RMSE=16.4151, MAE=6.4669\n",
+      "[Adaptive Fold 2] RMSE=7.0911, MAE=4.1311\n",
+      "[Adaptive Fold 3] RMSE=14.9139, MAE=7.1951\n",
+      "[Adaptive Fold 4] RMSE=14.0176, MAE=6.9817\n",
+      "[Adaptive Fold 5] RMSE=12.4674, MAE=5.9566\n",
+      "[Adaptive Fold 6] RMSE=15.0647, MAE=7.6404\n",
+      "[Adaptive Fold 7] RMSE=12.1248, MAE=6.2419\n",
+      "[Adaptive Fold 8] RMSE=12.5859, MAE=7.0948\n",
+      "[Adaptive Fold 9] RMSE=7.2333, MAE=4.4437\n",
+      "[Adaptive Fold 10] RMSE=9.3082, MAE=4.7859\n",
+      "[Adaptive Fold 11] RMSE=6.8446, MAE=4.0072\n",
       "\n",
       "--- Baseline TimeSeriesSplit CV ---\n",
-      "[Baseline Fold 1] RMSE=0.3712, MAE=0.1639\n",
-      "[Baseline Fold 2] RMSE=0.3755, MAE=0.1745\n",
-      "[Baseline Fold 3] RMSE=0.3825, MAE=0.1662\n",
-      "[Baseline Fold 4] RMSE=0.4611, MAE=0.1746\n"
+      "[Baseline Fold 1] RMSE=13.0893, MAE=8.7354\n",
+      "[Baseline Fold 2] RMSE=14.8187, MAE=8.6275\n",
+      "[Baseline Fold 3] RMSE=13.2611, MAE=8.2821\n",
+      "[Baseline Fold 4] RMSE=16.4087, MAE=8.8815\n",
+      "[Baseline Fold 5] RMSE=17.3526, MAE=8.4517\n",
+      "\n",
+      "===== Summary Metrics =====\n",
+      "Adaptive CV - Avg RMSE: 11.6424, Avg MAE: 5.9041\n",
+      "Baseline CV - Avg RMSE: 14.9861, Avg MAE: 8.5956\n"
      ]
     }
    ],
@@ -33,16 +114,20 @@
     "from scipy.stats import ks_2samp\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from xgboost import XGBRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "\n",
     "\n",
     "class DriftPointDetector:\n",
     "    \"\"\"\n",
     "    ตรวจจับจุดเกิด concept drift ในข้อมูล time series ด้วยการใช้\n",
     "    Kolmogorov-Smirnov test (KS test) บน sliding windows\n",
     "    \"\"\"\n",
-    "    def __init__(self, window_size: int = 50, threshold: float = 0.005):\n",
+    "    def __init__(self, window_size: int = 100, threshold: float = 0.05):\n",
     "        self.window_size = window_size\n",
     "        self.threshold = threshold\n",
     "        self.drift_points_: List[int] = []\n",
@@ -80,7 +165,7 @@
     "    สร้าง train/test folds โดยแบ่งตาม drift points ที่ตรวจจับได้\n",
     "    โดยจะข้ามช่วงที่สั้นเกินไป เพื่อให้แต่ละ fold มีขนาดพอเหมาะ\n",
     "    \"\"\"\n",
-    "    def __init__(self, min_fold_size: int = 50, test_ratio: float = 0.2):\n",
+    "    def __init__(self, min_fold_size: int = 100, test_ratio: float = 0.15):\n",
     "        self.min_fold_size = min_fold_size\n",
     "        self.test_ratio = test_ratio\n",
     "\n",
@@ -174,29 +259,45 @@
     "    df = df.sort_values(\"Date\")\n",
     "\n",
     "    # Feature selection (เลือก column ที่ใช้เป็น X)\n",
-    "    X = df[['Open', 'High', 'Low', 'Volume']]\n",
-    "    y = df['Close']\n",
+    "    #X = df[['Open', 'High', 'Low', 'Volume']]\n",
+    "    #y = df['Close']\n",
     "\n",
-    "    # สร้าง pipeline เดียวใช้ทั้ง Adaptive CV และ Baseline CV\n",
-    "    pipeline = Pipeline([\n",
-    "        ('scale', StandardScaler()),\n",
-    "        ('regressor', LinearRegression())\n",
-    "    ])\n",
+    "    # Pipeline สำหรับ Baseline TimeSeriesSplit CV (Linear Model)\n",
+    "    baseline_pipeline = Pipeline([\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('regressor', LinearRegression())\n",
+    "])\n",
     "\n",
+    "    # Pipeline สำหรับ Adaptive CV (Random Forest)\n",
+    "    adaptive_pipeline = Pipeline([\n",
+    "    ('scale', StandardScaler()),\n",
+    "    ('regressor', RandomForestRegressor(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=5,              # ลดความลึก\n",
+    "    min_samples_leaf=10,      # ป้องกัน overfit\n",
+    "    random_state=42\n",
+    ")) \n",
+    "])\n",
+    "    \n",
     "    # 1) Detect drift points\n",
-    "    detector = DriftPointDetector(window_size=300, threshold=0.05)\n",
+    "    detector = DriftPointDetector(window_size = 200, threshold = 0.05)\n",
     "    drift_points = detector.detect(X)\n",
     "    print(f\"Detected drift points at indices: {drift_points}\")\n",
     "\n",
     "    # 2) Run Adaptive CV\n",
-    "    drift_cv = DriftAdaptiveTimeSeriesCV(pipeline)\n",
+    "    drift_cv = DriftAdaptiveTimeSeriesCV(adaptive_pipeline)\n",
     "    print(\"\\n--- Drift-Aware Adaptive CV ---\")\n",
     "    drift_rmse, drift_mae = drift_cv.run(X, y, drift_points)\n",
     "\n",
     "    # 3) Run Baseline TimeSeriesSplit CV\n",
-    "    baseline_cv = BaselineTimeSeriesCV(pipeline, n_splits=4)\n",
+    "    baseline_cv = BaselineTimeSeriesCV(baseline_pipeline, n_splits = 5)\n",
     "    print(\"\\n--- Baseline TimeSeriesSplit CV ---\")\n",
-    "    base_rmse, base_mae = baseline_cv.run(X, y)\n"
+    "    base_rmse, base_mae = baseline_cv.run(X, y)\n",
+    "\n",
+    "    # 4) สรุปเปรียบเทียบผลลัพธ์\n",
+    "    print(\"\\n===== Summary Metrics =====\")\n",
+    "    print(f\"Adaptive CV - Avg RMSE: {np.mean(drift_rmse):.4f}, Avg MAE: {np.mean(drift_mae):.4f}\")\n",
+    "    print(f\"Baseline CV - Avg RMSE: {np.mean(base_rmse):.4f}, Avg MAE: {np.mean(base_mae):.4f}\")\n"
    ]
   }
  ],
