--- a/Nvdia_Plot.ipynb
+++ b/Nvdia_Plot.ipynb
@@ -37,6 +37,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc6367e2",
+   "metadata": {},
+   "source": [
+    "# Show Raw Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "c8ce4167",
@@ -705,6 +713,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f355f1a8",
+   "metadata": {},
+   "source": [
+    "# Plot Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "16b81cb7",
@@ -828,7 +844,7 @@
    "id": "79606e75",
    "metadata": {},
    "source": [
-    "# Test"
+    "# Show Result of Model"
    ]
   },
   {
